--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@babel/core": "^7.11.6",
+        "@fullcalendar/daygrid": "^5.3.2",
+        "@fullcalendar/react": "^5.3.1"
     }
 }
