--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dependencies": {
         "@babel/core": "^7.11.6",
         "@fullcalendar/daygrid": "^5.3.2",
-        "@fullcalendar/react": "^5.3.1"
+        "@fullcalendar/list": "^5.3.1",
+        "@fullcalendar/react": "^5.3.1",
+        "@fullcalendar/timegrid": "^5.3.1"
     }
 }
