Ignore public css and js files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/mix-manifest.json
+/public/css
+/public/js
 /storage/*.key
 /vendor
 .env
@@ -14,6 +17,5 @@ yarn-error.log
 .editorconfig
 .gitattributes
 .styleci.yml
-public/mix-manifest.json
 **/#*#
 **/.DS_Store
