--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/passport": "^10.0",
         "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "spatie/laravel-permission": "^3.16"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
